--- a/package.json
+++ b/package.json
@@ -23,8 +23,16 @@
     "@nestjs/common": "^10.1.3",
     "@nestjs/core": "^10.1.3",
     "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/typeorm": "^10.0.0",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^6.9.0",
+    "helmet": "^7.0.0",
+    "pg": "^8.11.3",
+    "postgresql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.12",
