--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
     "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/validator": "^13.11.1",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^6.9.0",
@@ -32,12 +37,14 @@
     "postgresql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.12",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.1.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.0",
