--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/validator": "^13.11.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -33,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express-rate-limit": "^6.9.0",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "postgresql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
