--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@nestjs/cli": "^10.1.12",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.7",
