--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "yarn run typeorm migration:run -- -d ./src/config/config.ts",
+    "migration:run": "yarn run typeorm migration:run -d ./src/config/config.ts",
     "migration:generate": "yarn run typeorm -d ./src/config/config.ts migration:generate ./src/migrations/migration/$npm_config_name",
     "migration:create": "yarn run typeorm -- migration:create ./src/migrations/migration/$npm_config_name",
     "migration:revert": "yarn run typeorm -- -d ./src/config/config.ts migration:revert"
